Chat individual fet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
             android:name=".ChangeCorreoActivity"
             android:exported="false" />
         <activity
+            android:name=".PrivateMessagesActivity"
+            android:exported="false" />
+        <activity
             android:name=".SplashScreenActivity"
             android:exported="true">
             <intent-filter>
